# log-generator

./: .flake8  .gitignore  AUTHORS.md  HISTORY.md  README.md  TODO.md  debug.py  mise.toml  pyproject.toml
conf/patterns/: apache_commons.yml  dns.yml  message-tracking.md  message-tracking.yml  security-logs.yml
examples/: message-tracking.yml  security-logs.yml  web-server-logs.yml
misc/: user-enrichment-pipeline.txt
patterns/: web-server-logs.yml
rlog_generator/: cli.py  rlog_generator.py  utils.py  version.py
tests/: test_rlog_generator.py  test_utils.py
